--- a/VirtualCones/App.xaml
+++ b/VirtualCones/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="AOS_VirtualCones_MCB.App"
+    x:Class="VirtualCones_MCB.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:AOS_VirtualCones_MCB"
+    xmlns:local="clr-namespace:VirtualCones_MCB"
     Startup="Application_Startup">
     <Application.Resources />
 </Application>
