--- a/VirtualCones/Views/ProgressView.xaml
+++ b/VirtualCones/Views/ProgressView.xaml
@@ -1,11 +1,11 @@
 ﻿<Window
-    x:Class="AOS_VirtualCones_MCB.Views.ProgressView"
+    x:Class="VirtualCones_MCB.Views.ProgressView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:AOS_VirtualCones_MCB.Views"
+    xmlns:local="clr-namespace:VirtualCones_MCB.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="clr-namespace:AOS_VirtualCones_MCB.ViewModels"
+    xmlns:vm="clr-namespace:VirtualCones_MCB.ViewModels"
     Title="{Binding TitleString}"
     Width="1000"
     Height="180"
